added elements in HTML

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button class="l drum">l</button>
     </div>
 
-    <footer>Smash it away! 🥁.</footer>
+    <footer>Smash it! 🥁.</footer>
     <script src="./index.js"></script>
   </body>
 </html>
